--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
     }
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
     }
 } lintOptions {
     disable 'InvalidPackage'
@@ -38,7 +41,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 
     compile 'com.jakewharton:butterknife:7.0.1'
-
-    compile 'com.parse:parse-android:1.11.0'
+    compile 'com.firebase:firebase-client-android:2.4.1+'
 
 }
