--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "pe.wanavana.android.sanisidromovil"
+        applicationId "pe.apiconz.android.sanisidromovil"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
